--- a/css/style.css
+++ b/css/style.css
@@ -379,9 +379,9 @@ footer{
 }
 p{
 
-	font-size: 15px;
+	font-size: 9px;
 	font-weight: bolder;
-	line-height: 24px;
+	line-height: 18px;
 	padding: 10px;
 	text-align: justify;
 }
@@ -447,13 +447,13 @@ height: 100%;
 
 /*SEUDO CLASES*/
 p {
-	font-size: 12px;
+	font-size: 9px;
 	font-weight: normal;
 	color: #333;
 }
 
 .subtitle{
-    font-size: 34px;
+    font-size: 28px;
     color: #f27507;
     padding-bottom:15px;
     border-bottom: solid 2px #ccc;
@@ -470,10 +470,17 @@ p {
 
 .resaltado{
     font-weight: bold;
-    font-size: 18px;
+    font-size: 15px;
     color:#003f5e;
 }
 
 
-
-
+p {
+	font-family:'Nobile',sans-serif;
+	font-size:12px;
+	text-align:justify;
+	text-shadow:1px 1px 3px rgba(0,0,0,0.4);
+	color:black;
+	text-align:left;
+	margin-top: auto;
+  }
